--- a/src/components/main/introduccion/intro.css
+++ b/src/components/main/introduccion/intro.css
@@ -23,20 +23,32 @@
   max-width: 600px;
 }
 
-.intro-contenedor{
+.intro-contenedor {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  background-color: #fff;
+  color: #000000;
 }
 
-.intro-contenedor-informacion{
+.intro-contenedor-informacion {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 50%;
+  height: 500px;
+  margin: 20px 40px;
 }
 
-.intro-contenedor-informacion .intro-carrusel-contenido-imagen{
+.intro-contenedor-imagen {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.intro-contenedor-imagen-img {
+  width: 300px;
 }
