--- a/src/components/main/nosotros/nosotros.css
+++ b/src/components/main/nosotros/nosotros.css
@@ -1,5 +1,3 @@
-
-
 .nosotros-container-general {
   display: flex;
   align-items: center;
@@ -7,6 +5,7 @@
   flex-direction: row;
   background-color: #fff;
   flex-wrap: wrap;
+  padding: 20px;
 }
 .nosotros-container {
   width: 100%;
@@ -20,15 +19,20 @@
 .nosotros-container-item {
   width: 150px;
   height: 150px;
-  border: 1px solid blue;
+  border: 1px solid rgb(224, 224, 224);
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3 ease-in-out;
 }
-.nosotros-container-general-img {
-  width: 300px;
+
+.nosotros-container-item:hover  {
+  transform: translate(0px,-10px);
+  color: red;
 }
 
 .nosotros-container-img {
@@ -40,4 +44,9 @@
   justify-content: center;
   flex-direction: column;
   width: 50%;
+}
+
+.nosotros-container-item-icons {
+  font-size: 50px;
+  color: rgb(9, 92, 107);
 }
