--- a/src/components/main/nosotros/nosotros.css
+++ b/src/components/main/nosotros/nosotros.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
 }
 
 .nosotros-container-item {
@@ -31,7 +31,7 @@
 }
 
 .nosotros-container-item:hover  {
-  transform: translate(0px,-10px);
+  transform: translate(0px,-5px);
   color: red;
 }
 
@@ -43,7 +43,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .nosotros-container-item-icons {
