--- a/src/components/main/servicios/servicios.css
+++ b/src/components/main/servicios/servicios.css
@@ -26,12 +26,17 @@
   padding: 20px;
   gap: 20px;
   flex-wrap: wrap;
-  border: 1px solid gray;
+  border-bottom: 1px solid gray;
+  padding: 20px;
+}
+
+.servicios-contenedor.invertido {
+  flex-wrap: wrap-reverse;
 }
 
 .servicios-contenedor-img {
   object-fit: cover;
-  max-width: 500px;
+  max-width: 450px;
   width: 100%;
   border-radius: 10px;
 }
