--- a/src/components/main/clientes/clientes.css
+++ b/src/components/main/clientes/clientes.css
@@ -54,9 +54,10 @@
   
 }
 
-.sectorPublico{
+/* .sectorPublico{
   display: none;
-}
-.control_con_active{
-  /* display: none; */
+} */
+
+.con_desactive{
+  display: none !important;
 }
