--- a/src/components/main/contacto/contacto.css
+++ b/src/components/main/contacto/contacto.css
@@ -36,9 +36,9 @@
   display: grid;
   place-items: center;
   background: rgb(3 193 0);
-  width: 4rem;
-  height: 4rem;
-  border-radius: 15px;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
   box-shadow: 0 0 8px rgb(46, 132, 45);
   cursor: pointer;
 }
@@ -73,20 +73,27 @@ input:focus:required{
   border: 5px solid rgb(246, 84, 84);
 }
 
-input:required:focus {
+input:required:focus, textarea:focus, select:focus {
   border: rgb(27, 156, 46) solid 3px;
   outline: none;
 }
 
-input, textarea {
+input, textarea, select {
   border-radius: 5px;
   border: 1px solid grey;
 }
 
-textarea:focus {
-  border: rgb(27, 156, 46) solid 3px;
-  outline: none;
+select {
+  background: #fff;
+  height: 1.9rem;
 }
+
+select option:disabled {
+  background: rgb(217, 235, 253);
+  color: #404040;
+  text-transform: uppercase;
+}
+
   @media screen and (max-width: 700px) {
     #contacto{
       flex-flow: column-reverse;
