--- a/src/components/main/contacto/contacto.css
+++ b/src/components/main/contacto/contacto.css
@@ -39,7 +39,7 @@
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
-  box-shadow: 0 0 8px rgb(46, 132, 45);
+  box-shadow: 0 0 8px rgb(41, 114, 40);
   cursor: pointer;
 }
 
@@ -108,6 +108,8 @@ select option:disabled {
   }
 
   .successMessage-box {
+    box-sizing: border-box;
+    padding: 7rem;
     position: absolute;
     z-index: 2;
     width: 100%;
