--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,21 +1,84 @@
 .eamt__navbar {
+  position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: baseline;
   color: #fff;
-  padding: 2rem;
+  padding: 1.5rem 2rem .7rem;
+  background: rgb(8, 39, 80);
 }
 
 .eamt__navbar h1 {
+  position: relative;
+  z-index: 4;
   margin: 0;
 }
 
 .eamt__navbar ul {
   margin: 0;
   display: flex;
-  align-items: end;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .eamt__navbar li {
   list-style: none;
+}
+
+
+.eamt__navbar a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.3rem;
+}
+
+.eamt__navbar a:hover {
+  color: rgb(144, 157, 252);
+}
+
+.eamt__navbar-menu {
+  display: none;
+}
+
+.eamt__navbar-menu svg {
+  position: relative;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.eamt__navbar-menu ul {
+  text-align: center;
+  position: absolute;
+  z-index: 2;
+  padding: 2rem 1rem 2rem;
+  width: 18rem;
+  right: 0;
+  top: 4rem;
+  display: flex;
+  flex-flow: column;
+  gap: 3rem;
+  background: rgb(8, 39, 80);
+  backdrop-filter: blur(3px);
+  border-radius: 0 0 0 8px;
+  animation: menuDisplay .3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+}
+
+@keyframes menuDisplay {
+  0% {
+    transform-origin: 0% 0%;
+    transform: rotateX(80deg);
+    top: 2rem;
+  }
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .eamt__navbar-links {
+    display: none;
+  }
+
+  .eamt__navbar-menu {
+    display: block;
+  }
 }
