--- a/src/components/main/clientes/clientes2.css
+++ b/src/components/main/clientes/clientes2.css
@@ -1,8 +1,25 @@
 .clientes__slider-container {
   overflow: hidden;
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+  justify-content: center;
+  background: #fff;
+}
+
+.clientes__slider-title {
+  font-size: 3rem;
+  font-weight: 600;
+  margin: 2rem auto 1rem;
+}
+
+.clientes__slider-container hr {
+  margin: auto;
+  width: 95%;
 }
 
 .clientes__slider {
+  margin: auto;
   position: relative;
   background: #fff;
   padding: 1rem;
@@ -38,7 +55,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(22, 22, 22, .4);
+  /* background: rgba(22, 22, 22, .3); */
   bottom: 0;
   left: 0;
 }
