--- a/src/components/main/ubicacion/ubicacion.css
+++ b/src/components/main/ubicacion/ubicacion.css
@@ -1,12 +1,19 @@
-.Ubicacion{
-    z-index: 1;
-    display: flex;
-    gap: 2rem;
-    color: white;
-    /* font-weight: 600; */
-    /* background: rgb(45 165 240); */
-    /* padding: 2rem; */
-    margin-bottom: 8.5rem;
-    justify-content: center;
-    align-items: center;
+.Ubicacion {
+  z-index: 1;
+  display: flex;
+  gap: 2rem;
+  background-color: #fff;
+  color: #000000;
+  /* font-weight: 600; */
+  /* background: rgb(45 165 240); */
+  /* padding: 2rem; */
+  margin-bottom: 8.5rem;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+iframe {
+  width: 100%;
+  height: 500px;
 }
