--- a/src/components/main/clientes/clientes.css
+++ b/src/components/main/clientes/clientes.css
@@ -1,63 +1,73 @@
-#Clientes {
+.clientes__container {
+  z-index: 3;
+  overflow: hidden;
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1.2rem;
-  background: white;
-  padding: 2rem;
-  z-index: 1;
-}
-
-#Clientes h3 {
-  font-size: 3rem;
-}
-
-#servicios-grid {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: center;
-  gap: 1.2rem;
-  background: white;
-  padding: 2rem;
-}
-
-
-#cliente-caja {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: space-around;
-  gap: 1rem;
-  width: 10rem;
-  border-radius: 10px;
-  padding: 1rem;
-  /* background: rgb(3, 136, 213); */
-  transition: .2s;
-  text-decoration: none;
-}
-
-.cliente-icono {
-  width: 7rem;
-  /* filter: invert(100%) url(#color-filter); */
-}
-
-#cliente-caja:hover{
-  transform: scale(1.05);
-  /* background: rgb(18, 163, 246); */
-}
-
-#cliente-caja p {
   text-align: center;
-  text-decoration: none;
-  color: white;
+  justify-content: center;
+  background: #fff;
+}
+
+.clientes__title {
+  font-size: 3rem;
+  font-weight: 600;
+  margin: 2rem auto 1rem;
+}
+
+.clientes__container hr {
+  margin: auto;
+  width: 95%;
+}
+
+.clientes__slider {
+  margin: auto;
+  position: relative;
+  background: #fff;
+  padding: 1rem;
+  overflow: hidden;
+  width: 2000px;
+}
+
+.clientes__slider img {
+  width: 6rem;
+}
+
+.clientes__slider-fotos { 
+  position: relative;
+  height: 6rem;
+  width: 100%;
+  animation: slider 40s infinite linear;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
   
 }
 
-/* .sectorPublico{
-  display: none;
-} */
+@keyframes slider {
+  from{
+    right: 149%;
+  }
+  to {
+    right: 0;
+  }
+}
 
-.con_desactive{
-  display: none !important;
+.clientes__slider-cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+.clientes__sectores p {
+  margin: 2rem;
+}
+
+.clientes__sectores-cards {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
 }
