--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
   background-image: url("./imagenes/bg.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
+  /* background-attachment: fixed; */
   /* filter: blur(8px); */
 }
 
@@ -13,6 +14,17 @@
   width: 70%;
   margin: auto;
 }
+
+/* #headerBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  background-image: url("./imagenes/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+
+} */
 
 @media screen and (max-width: 1200px) {
   #bigBox-app {
