Igual color para todos los grupos de clientes

--- a/src/components/main/clientes/clientes.css
+++ b/src/components/main/clientes/clientes.css
@@ -102,7 +102,7 @@
 
 .clientes__container h4 {
   color: #fff;
-  /* background: #00348f; */
+  background: #00348f;
   padding: .5rem 1rem;
   /* border-radius: 5px; */
   width:100%;
