--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -20,3 +20,28 @@
   border-top: solid rgb(203, 201, 201) 1px;
   padding-top: 1rem;
 }
+
+.footer__contador {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 20px;
+}
+
+.footer__contador img {
+  width: 90px;
+}
+
+.footer__cubierta-contador {
+  position: absolute;
+  background: rgba(9, 46, 95, 1);
+  width: 100px;
+  height: 20px;
+  left: 0;
+  transition: .3s;
+  z-index: 4;
+}
+
+.footer__cubierta-contador:hover {
+  opacity: 0.3;
+}
