--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -2,4 +2,10 @@
   display: flex;
   flex-flow: column;
   gap: .5rem;
+  padding-top: 6.2rem;
+}
+
+.ancla{
+	margin: 0;
+  scroll-margin-top: 6em;
 }
