--- a/src/components/main/clientes/clientes.css
+++ b/src/components/main/clientes/clientes.css
@@ -27,7 +27,7 @@
   overflow: hidden;
   width: 2000px;
   animation: aparecerSlider 1s linear;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 @keyframes aparecerSlider {
@@ -41,9 +41,10 @@
 
 .clientes__slider img {
   width: 6rem;
+  max-height: 4.5rem;
 }
 
-.clientes__slider-fotos { 
+.clientes__slider-fotos {
   position: relative;
   height: 6rem;
   width: 100%;
@@ -57,7 +58,7 @@
 }
 
 @keyframes adelante1 {
-  from{
+  from {
     right: 149%;
   }
   to {
@@ -70,7 +71,7 @@
 }
 
 @keyframes atras1 {
-  from{
+  from {
     right: 0;
   }
   to {
@@ -83,7 +84,7 @@
 }
 
 @keyframes adelante2 {
-  from{
+  from {
     right: 138.5%;
   }
   to {
@@ -106,14 +107,14 @@
 .clientes__container h4 {
   color: #fff;
   background: #00348f;
-  padding: .5rem 1rem;
-  width:100%;
+  padding: 0.5rem 1rem;
+  width: 100%;
   margin-top: 1rem;
   text-transform: uppercase;
 }
 
 .clientes__botones {
-  gap: .5rem;
+  gap: 0.5rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -127,7 +128,7 @@
   font-weight: 600;
   outline: none;
   background: rgb(213, 213, 213);
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .clientes__botones-active {
@@ -148,7 +149,7 @@
 
 @media screen and (max-width: 900px) {
   .clientes__botones button {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 }
 
